# NovaFund

./: package-lock.json
.github/workflows/: SECURITY_README.md  security.yml
backend/: .env.example  package-lock.json  package.json
backend/modules/__tests__/: apr.service.spec.ts  apr.utils.spec.ts
backend/modules/portfolio/: portfolio.repository.ts  portfolio.service.ts
backend/prisma/: schema.prisma
backend/src/: app.module.ts  user.controller.ts
backend/src/admin/: AUDIT_SYSTEM_README.md  admin.module.ts
backend/src/config/: env.validation.ts
backend/src/fee-bump/: fee-bump-audit.service.ts  fee-bump-resubmission.service.ts  fee-bump-throttler.guard.ts  fee-bump-whitelist.service.ts  fee-bump.controller.ts  fee-bump.module.ts  fee-bump.service.ts  sign-fee-bump.dto.ts
backend/src/graphql/: gql-throttler.guard.ts
backend/src/guards/: GEOIP_SETUP.md  api-key.guard.spec.ts  api-key.guard.ts  geo.guard.ts
backend/src/indexer/: indexer.module.ts
backend/src/jobs/: refund.job.ts
backend/src/milestone/: milestone.controller.ts  milestone.module.ts  (+1 more)
contracts/: Cargo.toml
contracts/limit-orders/: Cargo.toml  LIMIT_ORDERS_DOCUMENTATION.md
contracts/limit-orders/src/: lib.rs  tests.rs
contracts/project-launch/: Cargo.toml
contracts/project-launch/src/: lib.rs
contracts/project-launch/test_snapshots/tests/: test_contribute_tiered_kyc.1.json
contracts/rwa-revaluation-oracle/: Cargo.toml
contracts/smart-wallet/: Cargo.toml  SMART_WALLET_DOCUMENTATION.md
contracts/treasury/: Cargo.toml
frontend/: package-lock.json  package.json
(+105 files in other folders)
