[package]
name = "limit-orders"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soroban-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "tests"
path = "src/tests.rs"
